--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "DEBUG=https://git.new/pathToRegexpError nodemon app.js",
-    "test": "nodemon app.js"
+    "test": "nodemon app.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
